--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/jest": "^23.0.0",
     "@types/node": "^10.3.2",
+    "@types/web-animations-js": "^2.2.6",
     "jest": "^23.1.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.60.1",
