--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-typescript2": "^0.14.0",
+    "rollup-plugin-uglify": "^4.0.0",
     "tslint": "^5.10.0",
     "typescript": "^2.9.1",
     "unique-temp-dir": "^1.0.0"
