Set NODE_ENV before running rollup

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "scripts": {
     "test": "yarn run clean && yarn run compile && yarn run lint && yarn run t",
     "t": "jest",
-    "build": "yarn lint && rollup -c",
+    "build": "yarn lint && NODE_ENV=production rollup -c",
     "compile": "tsc",
-    "dev": "yarn run clean && rollup -c -w",
+    "dev": "yarn run clean && NODE_ENV=development rollup -c -w",
     "prepublishOnly": "yarn run test",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "clean": "rimraf dist"
