--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/mgenware/cf-neptune",
   "bugs": "https://github.com/mgenware/cf-neptune/issues",
   "keywords": [
-    "layit"
+    "algorithm", "visualization"
   ],
   "repository": {
     "type": "git",
@@ -31,17 +31,19 @@
   "devDependencies": {
     "@types/jest": "^23.0.0",
     "@types/node": "^10.3.2",
-    "@types/web-animations-js": "^2.2.6",
     "jest": "^23.1.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.60.1",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-typescript2": "^0.14.0",
     "rollup-plugin-uglify": "^4.0.0",
     "tslint": "^5.10.0",
     "typescript": "^2.9.1",
     "unique-temp-dir": "^1.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "popmotion-pose": "^2.0.6"
+  }
 }
