--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "homepage": "https://github.com/mgenware/cf-neptune",
   "bugs": "https://github.com/mgenware/cf-neptune/issues",
   "keywords": [
-    "algorithm", "visualization"
+    "algorithm",
+    "visualization"
   ],
   "repository": {
     "type": "git",
@@ -29,21 +30,22 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^23.0.0",
-    "@types/node": "^10.3.2",
+    "@types/gsap": "^1.19.2",
+    "@types/jest": "^23.1.1",
+    "@types/node": "^10.3.4",
     "jest": "^23.1.0",
     "rimraf": "^2.6.2",
-    "rollup": "^0.60.1",
+    "rollup": "^0.60.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-typescript2": "^0.14.0",
+    "rollup-plugin-typescript2": "^0.15.0",
     "rollup-plugin-uglify": "^4.0.0",
     "tslint": "^5.10.0",
-    "typescript": "^2.9.1",
+    "typescript": "^2.9.2",
     "unique-temp-dir": "^1.0.0"
   },
   "dependencies": {
-    "popmotion-pose": "^2.0.6"
+    "gsap": "^2.0.1"
   }
 }
