--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "scripts": {
     "test": "yarn run clean && yarn run compile && yarn run lint && yarn run t",
     "t": "jest",
-    "build": "yarn lint && NODE_ENV=production rollup -c",
+    "build": "yarn lint && cross-env NODE_ENV=production rollup -c",
     "compile": "tsc",
-    "dev": "yarn run clean && NODE_ENV=development rollup -c -w",
+    "dev": "yarn run clean && cross-env NODE_ENV=development rollup -c -w",
     "prepublishOnly": "yarn run test",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "clean": "rimraf dist"
@@ -33,6 +33,7 @@
     "@types/gsap": "^1.19.2",
     "@types/jest": "^23.1.1",
     "@types/node": "^10.3.4",
+    "cross-env": "^5.2.0",
     "jest": "^23.1.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.60.7",
