--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,18 @@
 {
-    "compilerOptions": {
-        "module": "esnext",
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "sourceMap": true,
-        "baseUrl": "lib",
-        "target": "ES5",
-        "outDir": "dist",
-        "declaration": true,
-        "strict": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "lib": [
-            "es5", "es6", "dom", "dom.iterable"
-        ]
-    },
-    "include": [
-        "lib/**/*"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+  "compilerOptions": {
+    "module": "esnext",
+    "removeComments": true,
+    "preserveConstEnums": true,
+    "sourceMap": true,
+    "baseUrl": "src",
+    "target": "ES5",
+    "outDir": "dist",
+    "declaration": true,
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "lib": ["es5", "es6", "dom", "dom.iterable"]
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
