--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "yarn run lint && yarn run clean && cross-env NODE_ENV=production rollup -c",
     "compile": "tsc",
     "dev": "yarn run clean && cross-env NODE_ENV=development rollup -c -w",
-    "lint": "tslint --project tsconfig.json --config tslint.json",
+    "lint": "eslint --max-warnings 0 --ext .ts src/",
     "clean": "rimraf dist"
   },
   "engines": {
@@ -35,7 +35,10 @@
     "@types/gsap": "^1.20.2",
     "@types/jest": "^25.1.3",
     "@types/node": "^13.7.4",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
     "cross-env": "^7.0.0",
+    "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^1.31.1",
@@ -44,7 +47,6 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-typescript2": "^0.26.0",
     "rollup-plugin-uglify": "^6.0.4",
-    "tslint": "^6.0.0",
     "typescript": "^3.7.5",
     "uglify-es": "^3.3.9",
     "unique-temp-dir": "^1.0.0"
